--- a/STAPI/Web.config
+++ b/STAPI/Web.config
@@ -5,6 +5,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
 -->
 <configuration>
+  <connectionStrings>
+    <add name="controlServer" connectionString="Data Source=192.168.1.98;Database=ST_sys;User id=sa;PWD=1QAZ2wsx;" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
