--- a/STAPI/packages.config
+++ b/STAPI/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
+  <package id="sqlSugar" version="4.9.9.1" targetFramework="net452" />
 </packages>
