--- a/STAPI/Web.config
+++ b/STAPI/Web.config
@@ -7,6 +7,7 @@
 <configuration>
   <connectionStrings>
     <add name="controlServer" connectionString="server=192.168.1.98;uid=sa;pwd=1QAZ2wsx;database=ST_sys;" />
+    <add name="TenacyDb" connectionString="server=192.168.1.98;uid=sa;pwd=1QAZ2wsx;database=$;" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
